--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,5 @@
 /phpunit.xml.dist   export-ignore
 /.scrutinizer.yml   export-ignore
 /tests              export-ignore
+/generator          export-ignore
+/generate.php       export-ignore
