Added generate script to compoers

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit"
+        "test": "vendor/bin/phpunit",
+        "generate": "php ./generate.php generate"
     },
     "config": {
         "sort-packages": true
