--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "php": "^7.0"
     },
     "require-dev": {
+        "graham-campbell/analyzer": "^1.1",
         "league/flysystem": "^1.0",
         "phpunit/phpunit": "^6.0",
         "symfony/console": "^3.2",
