--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         }
     ],
     "require": {
-        "php": "^7.0"
+        "php": "^7.0",
+        "spatie/async": "^0.0.4"
     },
     "require-dev": {
         "graham-campbell/analyzer": "^1.1",
+        "larapack/dd": "^1.1",
         "league/flysystem": "^1.0",
         "phpunit/phpunit": "^6.0",
         "symfony/console": "^3.2",
