--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "spatie/async": "^0.0.4"
+        "php": "^7.0"
     },
     "require-dev": {
         "graham-campbell/analyzer": "^1.1",
