--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     },
     "require-dev": {
         "graham-campbell/analyzer": "^1.1",
+        "larapack/dd": "^1.1",
         "league/flysystem": "^1.0",
         "phpunit/phpunit": "^6.0",
         "symfony/console": "^3.2",
