--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "require-dev": {
         "graham-campbell/analyzer": "^2.1.1",
         "league/flysystem": "^1.0",
-        "phpunit/phpunit": "^6.0|^7.0|^8.0",
+        "phpunit/phpunit": "^7.0|^8.0",
         "scrutinizer/ocular": "^1.5",
         "symfony/console": "^3.2",
         "symfony/css-selector": "^3.2",
