--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,13 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "ext-json": "*"
     },
     "require-dev": {
         "graham-campbell/analyzer": "^2.3",
         "league/flysystem": "^1.0",
-        "phpunit/phpunit": "^8.0",
+        "phpunit/phpunit": "^9.0",
         "symfony/console": "^3.2",
         "tightenco/collect": "^7.25",
         "twig/twig": "^1.28"
