--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
     },
     "require-dev": {
         "graham-campbell/analyzer": "^3.0",
+        "illuminate/collections": "^8.16",
         "league/flysystem": "^1.0",
         "phpunit/phpunit": "^9.0",
         "symfony/console": "^3.2",
-        "tightenco/collect": "^7.25",
         "twig/twig": "^1.28"
     },
     "config": {
