--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,10 +1,6 @@
-name: run-tests
+name: Tests
 
-on:
-    push:
-    pull_request:
-    schedule:
-        - cron: '0 0 * * *'
+on: [push, pull_request]
 
 jobs:
     test:
@@ -30,7 +26,7 @@ jobs:
                   coverage: none
 
             - name: Install dependencies
-              run: composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
+              run: composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
 
             - name: Execute tests
               run: vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
