--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "ext-json": "*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.6",
         "graham-campbell/analyzer": "^3.0.5",
         "illuminate/collections": "^8.62.0",
         "league/flysystem": "^2.3.0 || ^3.0",
