fix composer pest plugin

--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,9 @@
         }
     },
     "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        },
         "sort-packages": true
     },
     "scripts": {
