--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,13 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.6",
-        "graham-campbell/analyzer": "^4.2",
-        "illuminate/collections": "^8.62.0",
-        "league/flysystem": "^2.3.0 || ^3.0",
-        "pestphp/pest": "^1.21",
-        "symfony/console": "^5.3.7 || 6.0",
-        "twig/twig": "^3.3.3"
+        "friendsofphp/php-cs-fixer": "^3.88.2",
+        "graham-campbell/analyzer": "^5.0.0",
+        "illuminate/collections": "^12.33",
+        "league/flysystem": "^2.3.0 || ^3.30",
+        "pestphp/pest": "^4.1.2",
+        "symfony/console": "^5.3.7 || ^6.0 || ^7.3.4",
+        "twig/twig": "^3.21.1"
     },
     "autoload": {
         "psr-4": {
